CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(raster)

IF(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE, "Debug")
	#MESSAGE(FATAL_ERROR "CMAKE_BUILD_TYPE must be one of: Debug, Release")
ENDIF(NOT CMAKE_BUILD_TYPE)

IF(MSVC)
	OPTION(USE_MSVC_FAST_FLOATINGPOINT "Use MSVC /fp:fast option" ON)
	IF(USE_MSVC_FAST_FLOATINGPOINT)
		ADD_DEFINITIONS(/fp:fast)
	ENDIF(USE_MSVC_FAST_FLOATINGPOINT)
ENDIF(MSVC)

IF(WIN32)
	ADD_DEFINITIONS(/D _CRT_SECURE_NO_WARNINGS)
ENDIF(WIN32)

IF(APPLE)
	SET(CMAKE_CXX_LINK_FLAGS "-framework OpenGL -framework Cocoa")
ENDIF(APPLE)

SET(SOURCE_FILES
	raster.cpp
	../src/common.cpp
)

INCLUDE_DIRECTORIES(../src)
INCLUDE_DIRECTORIES(../deps/glm)
INCLUDE_DIRECTORIES(../deps/soil/src)

LINK_DIRECTORIES(../deps/soil)


ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} SOIL)

IF("${CMAKE_SYSTEM}" MATCHES "Linux")
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} GL)
ENDIF("${CMAKE_SYSTEM}" MATCHES "Linux")